--- a/source/SensorTagReaderSolution/SensorTagReader/MainPage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/MainPage.xaml
@@ -6,26 +6,31 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="using:SensorTagReader.Converters"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Width="808" Height="1024">
 
     <Page.Resources>
         <converters:BusyToVisibilityConverter x:Key="BusyToVisibilityConverter"/>
     </Page.Resources>
-    
-    <Grid Background="White">
+
+    <Grid Background="White" Width="800" Margin="4,0,4,159"  >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Sensor Tag Reader" Margin="10" x:Name="StatusField"/>
-        <TextBlock Margin="10" TextAlignment="Right" x:Name="VersionField"/>
-        <TextBlock Text="" Grid.Row="2" Margin="10" x:Name="txtError" Foreground="Red"/>
-        <StackPanel x:Name="SensorData" Grid.Row="3" Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="Sensor Tag Reader" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="StatusField"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" TextAlignment="Right" x:Name="VersionField"/>
+        <TextBlock Text="" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="txtError" Foreground="Red"/>
+        <StackPanel x:Name="SensorData" Grid.Row="3" Grid.ColumnSpan="3" Margin="10,10,10,9.8">
             <Grid>
                 <TextBlock Text="Temperature" Margin="0,0,0,5"/>
                 <TextBlock x:Name="txtTemperature" HorizontalAlignment="Right"/>
@@ -37,25 +42,33 @@
                 <Border BorderThickness="0,0,0,1" BorderBrush="Gray"/>
             </Grid>
         </StackPanel>
-        <StackPanel Grid.Row="4">
-            <TextBlock Margin="10">Sensor information</TextBlock>
-            <TextBlock Margin="10" x:Name="SensorInformation" />
+        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,10.2,10,9.8">
+            <TextBlock>Horse Name</TextBlock>
+            <TextBox x:Name="HorseNameField" LostFocus="OnSettingsChanged"></TextBox>
+            <TextBlock>Session ID</TextBlock>
+            <TextBox x:Name="SesssionIDField" LostFocus="OnSettingsChanged"></TextBox>
         </StackPanel>
-        <StackPanel Grid.Row="5" Margin="10">
-            <TextBlock>EventHub Settings</TextBlock>
+        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,10.2,10,9.6">
+            <TextBlock SelectionChanged="TextBlock_SelectionChanged" FontWeight="Bold">EventHub Settings</TextBlock>
             <TextBlock>Servicebus Namespace</TextBlock>
             <TextBox x:Name="ServiceBusNamespaceField" LostFocus="OnSettingsChanged"></TextBox>
             <TextBlock>EventHub Name</TextBlock>
-            <TextBox x:Name="EventHubNameField" LostFocus="OnSettingsChanged"></TextBox>
+            <TextBox x:Name="EventHubNameField" LostFocus="OnSettingsChanged" ></TextBox>
             <TextBlock>Shared Access Policy Name</TextBlock>
-            <TextBox x:Name="SharedAccessPolicyNameField" LostFocus="OnSettingsChanged"></TextBox>
+            <TextBox x:Name="SharedAccessPolicyNameField" LostFocus="OnSettingsChanged" ></TextBox>
             <TextBlock>Shared Access Policy Key</TextBlock>
-            <TextBox x:Name="SharedAccessPolicyKeyField" LostFocus="OnSettingsChanged"></TextBox>
-            <TextBlock>Sensor Name</TextBlock>
+            <TextBox x:Name="SharedAccessPolicyKeyField" LostFocus="OnSettingsChanged" ></TextBox>
+            <TextBlock FontWeight="Bold">Sensor Name</TextBlock>
             <TextBox x:Name="SensorNameField" LostFocus="OnSettingsChanged"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Row="5" Grid.Column="2" Margin="10,10.2,10,9.6" Height="Auto">
+            <TextBlock Margin="10" FontWeight="Bold">Sensor information</TextBlock>
+            <TextBlock Margin="10" FontWeight="Normal" x:Name="SensorInformation" Height="386" />
+        </StackPanel>
+        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
             <TextBlock x:Name="EventHubInformation"></TextBlock>
         </StackPanel>
-        <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="2" Margin="0,22.2,10,-107.2" Width="240" Height="85" VerticalAlignment="Top" >
             <Button  Height="50" x:Name="StartCommand" Tag="STOPPED" Content="Start" Width="100" VerticalAlignment="Center" Margin="10" Click="StartCommand_Click"/>
             <Button  Height="50" x:Name="SimulateCommand" Tag="STOPPED" Content="Simulate" Width="100" VerticalAlignment="Center" Margin="10" Click="SimulateCommand_Click" />
         </StackPanel>
