--- a/source/SensorTagReaderSolution/SensorTagReader/MainPage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/MainPage.xaml
@@ -30,25 +30,25 @@
         <TextBlock Text="Sensor Tag Reader" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="StatusField"/>
         <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" TextAlignment="Right" x:Name="VersionField"/>
         <TextBlock Text="" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="txtError" Foreground="Red"/>
-        <StackPanel x:Name="SensorData" Grid.Row="3" Grid.ColumnSpan="3" Margin="10,10,10,9.8">
+        <StackPanel x:Name="SensorData" Grid.Row="3" Grid.ColumnSpan="3" Margin="10">
             <Grid>
-                <TextBlock Text="Temperature" Margin="0,0,0,5"/>
+                <TextBlock Text="Temperature" />
                 <TextBlock x:Name="txtTemperature" HorizontalAlignment="Right"/>
                 <Border BorderThickness="0,0,0,1" BorderBrush="Gray"/>
             </Grid>
             <Grid>
-                <TextBlock Text="Humidity" Margin="0,0,0,5"/>
+                <TextBlock Text="Humidity" />
                 <TextBlock x:Name="txtHumidity" HorizontalAlignment="Right"/>
                 <Border BorderThickness="0,0,0,1" BorderBrush="Gray"/>
             </Grid>
         </StackPanel>
-        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,10.2,10,9.8">
+        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">
             <TextBlock>Horse Name</TextBlock>
             <TextBox x:Name="HorseNameField" LostFocus="OnSettingsChanged"></TextBox>
             <TextBlock>Session ID</TextBlock>
             <TextBox x:Name="SesssionIDField" LostFocus="OnSettingsChanged"></TextBox>
         </StackPanel>
-        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,10.2,10,9.6">
+        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="10">
             <TextBlock SelectionChanged="TextBlock_SelectionChanged" FontWeight="Bold">EventHub Settings</TextBlock>
             <TextBlock>Servicebus Namespace</TextBlock>
             <TextBox x:Name="ServiceBusNamespaceField" LostFocus="OnSettingsChanged"></TextBox>
@@ -61,7 +61,7 @@
             <TextBlock FontWeight="Bold">Sensor Name</TextBlock>
             <TextBox x:Name="SensorNameField" LostFocus="OnSettingsChanged"></TextBox>
         </StackPanel>
-        <StackPanel Grid.Row="5" Grid.Column="2" Margin="10,10.2,10,9.6" Height="Auto">
+        <StackPanel Grid.Row="5" Grid.Column="2" Margin="10" Height="Auto">
             <TextBlock Margin="10" FontWeight="Bold">Sensor information</TextBlock>
             <TextBlock Margin="10" FontWeight="Normal" x:Name="SensorInformation" Height="386" />
         </StackPanel>
