--- a/source/SensorTagReaderSolution/SensorTagReader/Pages/HomePage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/Pages/HomePage.xaml
@@ -4,13 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SensorTagReader.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Height="1280"
-    Width="768">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="640" Width="384">
 
 
-    <Grid Background="White" Width="800" Margin="4,0,4,159"  >
+
+    <Grid Background="LightGray" Margin="0,0,0,0" >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -19,15 +17,16 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="100*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Sensor Tag Reader" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="StatusField"/>
-        <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" TextAlignment="Right" x:Name="VersionField"/>
-        <TextBlock Text="" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10" x:Name="txtError" Foreground="Red"/>
+        <TextBlock Text="Sensor Tag Reader" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="30,0,0,0" x:Name="StatusField"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="30,0,0,0" TextAlignment="Right" x:Name="VersionField"/>
+        <TextBlock Text="" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="30,0,0,0"  x:Name="txtError" Foreground="Red"/>
         <StackPanel x:Name="SensorData" Grid.Row="3" Grid.ColumnSpan="3" Margin="10">
             <Grid>
                 <TextBlock Text="Temperature" />
@@ -46,31 +45,18 @@
             <TextBlock>Session ID</TextBlock>
             <TextBox x:Name="SesssionIDField" LostFocus="OnSettingsChanged"></TextBox>
         </StackPanel>
-        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="10">
-            <TextBlock SelectionChanged="TextBlock_SelectionChanged" FontWeight="Bold">EventHub Settings</TextBlock>
-            <TextBlock>Servicebus Namespace</TextBlock>
-            <TextBox x:Name="ServiceBusNamespaceField" LostFocus="OnSettingsChanged"></TextBox>
-            <TextBlock>EventHub Name</TextBlock>
-            <TextBox x:Name="EventHubNameField" LostFocus="OnSettingsChanged" ></TextBox>
-            <TextBlock>Shared Access Policy Name</TextBlock>
-            <TextBox x:Name="SharedAccessPolicyNameField" LostFocus="OnSettingsChanged" ></TextBox>
-            <TextBlock>Shared Access Policy Key</TextBlock>
-            <TextBox x:Name="SharedAccessPolicyKeyField" LostFocus="OnSettingsChanged" ></TextBox>
-            <TextBlock FontWeight="Bold">Sensor Name</TextBlock>
-            <TextBox x:Name="SensorNameField" LostFocus="OnSettingsChanged"></TextBox>
-        </StackPanel>
-        <StackPanel Grid.Row="5" Grid.Column="2" Margin="10" Height="Auto">
+        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Height="Auto">
             <TextBlock Margin="10" FontWeight="Bold">Sensor information</TextBlock>
-            <TextBlock Margin="10" FontWeight="Normal" x:Name="SensorInformation" Height="386" />
+            <TextBlock Margin="10" FontWeight="Normal" x:Name="SensorInformation" />
         </StackPanel>
-        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
+        <StackPanel Grid.Row="6" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
             <TextBlock x:Name="EventHubInformation"></TextBlock>
         </StackPanel>
-        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Grid.ColumnSpan="3" Margin="0,376,320,0" Width="auto" Height="85" VerticalAlignment="Top" >
-            <Button  Height="50" x:Name="StartCommand" Tag="STOPPED" Content="Start" Width="100" VerticalAlignment="Center" Margin="10" Click="StartCommand_Click"/>
-            <Button  Height="50" x:Name="SimulateCommand" Tag="STOPPED" Content="Simulate" Width="100" VerticalAlignment="Center" Margin="10" Click="SimulateCommand_Click" />
-            <Button  Height="50" x:Name="EnableRemoteCommand" Tag="ENABLEREMOTE" Content="Enable &#xD;&#xA;Remote" Width="100" VerticalAlignment="Center" Margin="10" Click="EnableRemote_Click" />
-            <Button  Height="50" x:Name="DisableRemoteCommand" Tag="DISABLEREMOTE" Content="Disable &#xD;&#xA;Remote" Width="100" VerticalAlignment="Center" Margin="10" Click="DisableRemote_Click" />
+        <StackPanel Grid.Row="9" Orientation="Horizontal" HorizontalAlignment="Left" Grid.ColumnSpan="2" Width="auto" VerticalAlignment="Bottom" >
+            <Button  Height="40" x:Name="StartCommand" Tag="STOPPED" Content="Start" Width="64" VerticalAlignment="Center" Margin="10" Click="StartCommand_Click" FontSize="10.667"/>
+            <Button  Height="40" x:Name="SimulateCommand" Tag="STOPPED" Content="Simulate" Width="64" VerticalAlignment="Center" Margin="10" Click="SimulateCommand_Click" FontSize="10.667" />
+            <Button  Height="40" x:Name="EnableRemoteCommand" Tag="ENABLEREMOTE" Content="Enable &#xD;&#xA;Remote" Width="64" VerticalAlignment="Center" Margin="10" Click="EnableRemote_Click" FontSize="10.667" />
+            <Button  Height="40" x:Name="DisableRemoteCommand" Tag="DISABLEREMOTE" Content="Disable &#xD;&#xA;Remote" Width="64" VerticalAlignment="Center" Margin="10" Click="DisableRemote_Click" FontSize="10.667" />
         </StackPanel>
     </Grid>
 </Page>
