--- a/source/SensorTagReaderSolution/SensorTagReader/Pages/HomePage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/Pages/HomePage.xaml
@@ -8,7 +8,7 @@
 
 
 
-    <Grid Background="LightGray" Margin="0,0,0,0" >
+    <Grid Background="{ThemeResource AppBarSeparatorForegroundThemeBrush}" Margin="0,0,0,0" >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
