--- a/source/SensorTagReaderSolution/SensorTagReader/Pages/MainPage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/Pages/MainPage.xaml
@@ -25,7 +25,7 @@
                     <RadioButton Tag="&#xe10f;" Content="Home" Style="{StaticResource SplitViewNavButtonStyle}" Checked="OnHomeButtonChecked" IsChecked="True" />
 
                     <!-- Search button -->
-                    <RadioButton Tag="&#xe11a;" Content="Search" Style="{StaticResource SplitViewNavButtonStyle}" Checked="OnSearchButtonChecked" />
+                    <RadioButton Tag="&#xe11a;" Content="Search" Style="{StaticResource SplitViewNavButtonStyle}" Checked="OnSearchButtonChecked" Background="Transparent" />
 
                     <!-- Settings button -->
                     <RadioButton Tag="&#xe115;" Content="Settings" Style="{StaticResource SplitViewNavButtonStyle}" Checked="OnSettingsButtonChecked" />
@@ -42,7 +42,7 @@
                 Width="40"
                 Height="40"
                 Background="Transparent"
-                Foreground="Red"
+                Foreground="White"
                 VerticalAlignment="Top"
                 BorderThickness="0"
                 Click="HamburgerButton_Click" />
