--- a/source/SensorTagReaderSolution/SensorTagReader/Pages/SettingsPage.xaml
+++ b/source/SensorTagReaderSolution/SensorTagReader/Pages/SettingsPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
 
-    <Grid Background="LightGray" Margin="0,0,0,0"  >
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0,0"  >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -36,7 +36,7 @@
         <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="10"/>
         <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="10">
             <TextBlock SelectionChanged="TextBlock_SelectionChanged" FontWeight="Bold">EventHub Settings</TextBlock>
-            <TextBlock>Servicebus Namespace</TextBlock>
+            <TextBlock Foreground="{ThemeResource TextBoxForegroundHeaderThemeBrush}">Servicebus Namespace</TextBlock>
             <TextBox x:Name="ServiceBusNamespaceField" LostFocus="OnSettingsChanged" TextChanged="ServiceBusNamespaceField_TextChanged"></TextBox>
             <TextBlock>EventHub Name</TextBlock>
             <TextBox x:Name="EventHubNameField" LostFocus="OnSettingsChanged" ></TextBox>
